--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
-body {
-    background-color: blue;
+* {
+    text-decoration: none;
+
+}
+.navbar {
+    background-color:#2F5AB3;
+    font-family: calibri;
+    padding-right: 15px;
+    padding-left: 15px; 
+}
+
+.navdiv {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo a {
+    font-size: 35px;
+    font-weight: 600;
+    color: white;
+}
+
+li {
+    list-style: none;
+    display: inline-block;
+}
+
+li a {
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    margin-right: 25px;
 }
