Updated title and changed font

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 .navbar {
     background-color:#2F5AB3;
-    font-family: calibri;
+    font-family: "Lato", sans-serif;
     padding-right: 15px;
     padding-left: 15px; 
 }
