--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 * {
     text-decoration: none;
     font-family: "Lato", sans-serif;
+    background-color:#87CEED;
+    color: #4AC087;
 
 }
 .navbar {
-    background-color:#2F5AB3;
     font-family: "Lato", sans-serif;
     padding-right: 15px;
     padding-left: 15px; 
+}
+
+.navbar button a{
+  background-color: #FFFFFF;
 }
 
 .navdiv {
@@ -16,11 +21,6 @@
     justify-content: space-between;
 }
 
-.logo a {
-    font-size: 35px;
-    font-weight: 600;
-    color: white;
-}
 .logo img {
     margin-bottom: -7px;
 }
@@ -31,7 +31,6 @@ li {
 }
 
 li a {
-    color: white;
     font-size: 18px;
     font-weight: bold;
     margin-right: 25px;
@@ -43,7 +42,6 @@ li a {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    color:#2F5AB3;
     height: 100vh;
 }
 
@@ -59,17 +57,13 @@ li a {
 }
 
 /* CSS for signup/in button in navbar */
-.navdiv a {
-    color: white;
-}
 .navdiv .button-19 {
   appearance: button;
-  background-color: #1899D6;
+  background-color: #d6d6d6;
   border: solid transparent;
   border-radius: 16px;
   border-width: 0 0 4px;
   box-sizing: border-box;
-  color: #FFFFFF;
   cursor: pointer;
   display: inline-block;
   font-family: din-round,sans-serif;
@@ -95,7 +89,7 @@ li a {
 
 .navdiv .button-19:after {
   background-clip: padding-box;
-  background-color: #1CB0F6;
+  background-color: #FFFFFF;
   border: solid transparent;
   border-radius: 16px;
   border-width: 0 0 4px;
