--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 * {
     text-decoration: none;
+    font-family: "Lato", sans-serif;
+    background-color:#87CEED;
+    color: #008A65;
 
 }
 .navbar {
-    background-color:#2F5AB3;
-    font-family: calibri;
+    font-family: "Lato", sans-serif;
     padding-right: 15px;
     padding-left: 15px; 
+}
+
+.navbar button a{
+  background-color: #FFFFFF;
 }
 
 .navdiv {
@@ -15,11 +21,6 @@
     justify-content: space-between;
 }
 
-.logo a {
-    font-size: 35px;
-    font-weight: 600;
-    color: white;
-}
 .logo img {
     margin-bottom: -7px;
 }
@@ -30,8 +31,157 @@ li {
 }
 
 li a {
-    color: white;
     font-size: 18px;
     font-weight: bold;
     margin-right: 25px;
+}
+
+.content {
+    padding: 0 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100vh;
+}
+
+.content h1 {
+    font-size: 40px;
+    align-items: end;
+
+}
+
+.content p{
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+/* CSS for signup/in button in navbar */
+.navdiv .button-19 {
+  appearance: button;
+  background-color: #d6d6d6;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 100px;
+}
+
+.navdiv .button-19:after {
+  background-clip: padding-box;
+  background-color: #FFFFFF;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.navdiv .button-19:main,
+.navdiv .button-19:focus {
+  user-select: auto;
+}
+
+.navdiv .button-19:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+
+.navdiv .button-19:disabled {
+  cursor: auto;
+}
+
+.navdiv .button-19:active {
+  border-width: 4px 0 0;
+  background: none;
+}
+
+/* CSS for Button in our content*/
+.content .button-19 {
+  appearance: button;
+  background-color: #d6d6d6;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 200px;
+}
+
+.content .button-19:after {
+  background-clip: padding-box;
+  background-color: #FFFFFF;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.content .button-19:main,
+.content .button-19:focus {
+  user-select: auto;
+}
+
+.content .button-19:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+
+.content .button-19:disabled {
+  cursor: auto;
+}
+
+.content .button-19:active {
+  border-width: 4px 0 0;
+  background: none;
 }
