--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
 * {
     text-decoration: none;
     font-family: "Lato", sans-serif;
+        /*
     background-color:#87CEED;
     color: #008A65;
+        */
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 
+}
+
+body {
+  background-color:#87CEED;
 }
 .navbar {
     font-family: "Lato", sans-serif;
@@ -13,6 +22,7 @@
 
 .navbar button a{
   background-color: #FFFFFF;
+  color: #008A65;
 }
 
 .navdiv {
@@ -28,12 +38,14 @@
 li {
     list-style: none;
     display: inline-block;
+    
 }
 
 li a {
     font-size: 18px;
     font-weight: bold;
     margin-right: 25px;
+    color: #008A65;
 }
 
 .content {
@@ -48,12 +60,8 @@ li a {
 .content h1 {
     font-size: 40px;
     align-items: end;
+    color: #008A65;
 
-}
-
-.content p{
-    font-size: 20px;
-    margin-top: 20px;
 }
 
 /* CSS for signup/in button in navbar */
@@ -122,6 +130,10 @@ li a {
 }
 
 /* CSS for Button in our content*/
+.content a{
+  background-color: #FFFFFF;
+  color: #008A65;
+}
 .content .button-19 {
   appearance: button;
   background-color: #d6d6d6;
@@ -185,3 +197,50 @@ li a {
   border-width: 4px 0 0;
   background: none;
 }
+
+
+footer {
+  background-color: #3F7DB7;
+}
+
+.footerContainer {
+  width: 100%;
+  padding: 70px 30px 20px;
+}
+
+.icons {
+  display: flex;
+  justify-content: center;
+  
+}
+
+.icons a {
+  text-decoration: none;
+  padding: 10px;
+  background-color: white;
+  margin: 10px;
+  border-radius: 50%;
+}
+
+.icons a i {
+  font-size: 2em;
+  color: #3F7DB7;
+  opacity: 0.9;
+}
+
+.footerNav {
+  margin: 30px 0;
+}
+
+.footerNav ul {
+  display: flex;
+  justify-content: center;
+}
+
+.footerNav ul li a {
+  color: white;
+  margin: 20px;
+  font-size: 1.3 em;
+  opacity: 0.7;
+}
+
