--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
 
 body {
   background-color:#87CEED;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 .navbar {
     
@@ -234,6 +237,7 @@ footer {
   bottom: 0;
   width: 100%;
   background-color: #3F7DB7;
+  margin-top: auto;
 }
 
 .footerContainer {
