--- a/style.css
+++ b/style.css
@@ -403,3 +403,61 @@ section h1 {
   text-align: center;
   font-size: 25px;
 }
+
+
+
+
+.team {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.team h3 {
+  font-size: 40px;
+  max-width: 500px;
+  height: 100%;
+}
+
+.team p {
+  text-align: justify;
+  font-size: 20px;
+  max-width: 400px;
+  height: 100%;
+}
+
+
+.team img {
+  max-width: 300px;
+  height:100%
+
+}
+
+.team2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.team2 h3 {
+  font-size: 40px;
+  max-width: 500px;
+  height: 100%;
+}
+
+.team2 p {
+  text-align: justify;
+  font-size: 20px;
+  max-width: 400px;
+  height: 100%;
+}
+
+.team2 img {
+  max-width: 300px;
+  height:100%
+
+}
