--- a/style.css
+++ b/style.css
@@ -3,14 +3,33 @@
 * { 
     text-decoration: none;
     font-family: "Raleway", sans-serif;
-    color: #008A65;
+    color: var(--secondary-color);
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+#theme {
+  cursor: pointer;
+  width: 30px;
+  margin-bottom: -5px;
+}
+
+:root{
+  --primary-color: #87CEED;
+  --secondary-color: #008A65;
+  --footer-color: #3F7DB7;
+}
+
+.darktheme {
+  --primary-color: #191970;
+  --secondary-color: #00af80;
+  --footer-color: #0e0e40;
+  --button-color: #FFFFFF;
+}
+
 body {
-  background-color:#87CEED;
+  background-color:var(--primary-color);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -27,7 +46,7 @@ body {
 
 .navbar button a{
   background-color: #FFFFFF;
-  color: #008A65;
+  color: var(--secondary-color);
 }
 
 .navdiv {
@@ -49,7 +68,7 @@ li {
 li a {
     font-size: 30px;
     margin-right: 25px;
-    color: #008A65;
+    color: var(--secondary-color);
 }
 
 .hero {
@@ -72,7 +91,7 @@ li a {
     font-size:  90px;
     font-weight: bold;
     align-items: end;
-    color: #008A65;
+    color: var(--secondary-color);
 
 }
 
@@ -165,7 +184,7 @@ li a {
 /* CSS for Button in our content*/
 .hero a{
   background-color: #FFFFFF;
-  color: #008A65;
+  color: var(--secondary-color);
   
 }
 .hero .button-19 {
@@ -236,7 +255,7 @@ footer {
   position:relative;
   bottom: 0;
   width: 100%;
-  background-color: #3F7DB7;
+  background-color: var(--footer-color);
   margin-top: auto;
 }
 
@@ -261,7 +280,7 @@ footer {
 
 .icons a i {
   font-size: 2em;
-  color: #3F7DB7;
+  color: var(--footer-color);
   opacity: 0.9;
 }
 
