--- a/style.css
+++ b/style.css
@@ -499,10 +499,9 @@ section h1 {
 
 .content .testimonial {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
-  margin-right: 2.7rem;
-  margin-left: 2.7rem;
+  margin-right: 30px;
+  margin-left: 30px;
   gap: 2.6rem;
   height: 100vh;
 }
@@ -515,6 +514,7 @@ section h1 {
   flex-basis: 33.3%;
   background-color: var(--teritary-green);
   height: 70%;
+  width: 100px;
   border-radius: 40px;
 }
 
@@ -523,6 +523,7 @@ section h1 {
 }
 
 .content .Rating h3 {
+  text-align: center;
   font-size: 2.8em;
 }
 
