--- a/style.css
+++ b/style.css
@@ -531,6 +531,7 @@ section h1 {
   text-align: center;
   font-size: 2.4em;
   width: 500px;
+  padding: 0px 65px 0px 65px;
 }
 
 @keyframes float {
